--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 		<label>Level: <input id="txt_level" style="width: 100px" type="text" name=""></label>
 		<hr>
 		<input id="btn_start" type="button" name="" value="START" status="start">
+		<button type="button" onclick="AGAIN()">AGAIN</button>
+		<script>
+			function AGAIN(){
+				location.reload();
+			}
+		</script>
+	</div>
 	</div>
 </body>
 <script type="text/javascript" src="block.js"></script>
